@@ -58,7 +58,7 @@ int32 Defcon::CGameMatch::AdvanceScore(int32 Amount)
 		PlayerShip->AddSmartBombs(SMARTBOMB_RESUPPLY);
 
 		const FString Str = TEXT("SMART BOMB AWARDED");
-		GMessageMediator.TellUser(Str);
+		GMessageMediator.TellUser(Str, MESSAGE_DURATION_IMPORTANT);
 	}
 
 	return Score; 
