@@ -5,6 +5,7 @@
 #include "DefconPlayMessagesWidgetBase.h"
 #include "Globals/MessageMediator.h"
 #include "Globals/prefs.h"
+#include "UMG/Public/Components/VerticalBoxSlot.h"
 
 
 #define DEBUG_MODULE      0
@@ -137,6 +138,140 @@ void UDefconPlayMessagesWidgetBase::Clear()
 	MessagesBeingShown.Empty();
 	Messages->SetText(FText::FromString(TEXT("")));
 }
+
+// ----------------------------------------------------------------------------------------------------
+
+bool UDefconDisplayMessagesBase::IsValid() const
+{
+	return (MessagesWidget->GetChildrenCount() == Messages.Num());
+}
+
+
+void UDefconDisplayMessagesBase::Clear()
+{
+	MessagesWidget->ClearChildren();
+	Messages.Empty();
+	Messages.Reserve(20);
+}
+
+
+void UDefconDisplayMessagesBase::RemoveTopmostMessage()
+{
+	MessagesWidget->RemoveChildAt(0);
+	Messages.RemoveAt(0);
+	check(IsValid());
+}
+
+
+void UDefconDisplayMessagesBase::NativeOnInitialized()
+{
+	Clear();
+
+	{
+		Defcon::FMessageConsumer Consumer(this, Defcon::EMessageEx::NormalMessage, 
+			[This = TWeakObjectPtr<UDefconDisplayMessagesBase>(this)](void* Payload)
+			{
+				check(Payload != nullptr);
+
+				if(This.IsValid())
+				{
+					const auto& Msg = *(Defcon::FNormalMessage*)Payload;
+					This->AddMessage(Msg.Text, Msg.Duration, Msg.Type); 
+				} 
+			});
+
+		Defcon::GMessageMediator.RegisterConsumer(Consumer);
+	}
+
+	{
+		Defcon::FMessageConsumer Consumer(this, Defcon::EMessageEx::ClearNormalMessages, 
+			[This = TWeakObjectPtr<UDefconDisplayMessagesBase>(this)](void* Payload)
+			{
+				if(This.IsValid())
+				{
+					This->Clear();
+				} 
+			});
+
+		Defcon::GMessageMediator.RegisterConsumer(Consumer);
+	}
+}
+
+
+void UDefconDisplayMessagesBase::NativeTick(const FGeometry& MyGeometry, float DeltaTime)
+{
+	if(IsPaused())
+	{
+		return;
+	}
+
+	check(IsValid());
+
+	while(!Messages.IsEmpty() && Cast<UTextBlock>(MessagesWidget->GetChildAt(0))->GetText().IsEmptyOrWhitespace())
+	{
+		RemoveTopmostMessage();
+	}
+
+	if(Messages.IsEmpty())
+	{
+		return;
+	}
+
+	Messages[0].Duration -= DeltaTime;
+
+	if(Messages[0].Duration > 0.0f)
+	{
+		return;
+	}
+
+	RemoveTopmostMessage();
+}
+
+
+void UDefconDisplayMessagesBase::AddMessage(const FString& Str, float Duration, Defcon::EDisplayMessage MessageKind)
+{
+	check(IsValid());
+
+	// Strip out any existing messages that match our kind.
+
+	if(MessageKind != Defcon::EDisplayMessage::None)
+	{
+		for(int32 Index = Messages.Num() - 1; Index >= 0; Index--)
+		{
+			if(Messages[Index].Kind == MessageKind)
+			{
+				Messages.RemoveAt(Index);
+				MessagesWidget->RemoveChildAt(Index);
+			}
+		}
+
+		check(IsValid());
+	}
+
+	// Add message.
+
+	if(Duration == 0.0f)
+	{
+		Duration = MESSAGE_DURATION;
+	}
+
+	const FDisplayMessage Message = { Duration, MessageKind };
+
+	Messages.Add(Message);
+
+	auto TextBlock = Daylon::MakeWidget<UTextBlock>();
+
+	auto TheSlot = MessagesWidget->AddChildToVerticalBox(TextBlock);
+
+	TheSlot->SetHorizontalAlignment(EHorizontalAlignment::HAlign_Center);
+
+	TextBlock->SetFont             (Font);
+	TextBlock->SetColorAndOpacity  (Color);
+	TextBlock->SetText             (FText::FromString(Str));
+
+	check(IsValid());
+}
+
 
 
 #if(DEBUG_MODULE == 1)
